# turtlecoin-mobile-wallet-qt

./: .gitignore  .gitmodules  Backend.h  README.md  TonChan.pro  main.cpp
src/: Backend.cpp  Backend.h  Page1Form.ui.qml  TonChan.pro
src/wallet-backend/include/: BlockchainExplorerData.h  CryptoNote.h
src/wallet-backend/src/: CMakeLists.txt
src/wallet-backend/src/Common/: TransactionExtra.cpp
src/wallet-backend/src/Serialization/: BlockchainExplorerDataSerialization.cpp  SerializationTools.h
src/wallet-backend/src/Utilities/: FormatTools.cpp
src/wallet-backend/src/WalletBackend/: Transfer.cpp  WalletBackend.cpp
src/wallet-backend/src/config/: CryptoNoteConfig.h
wallet-backend/: CMakeLists.txt
wallet-backend/src/Common/: TransactionExtra.h  int-util.h
wallet-backend/src/Nigel/: Nigel.h
wallet-backend/src/Serialization/: CryptoNoteSerialization.cpp  CryptoNoteSerialization.h
wallet-backend/src/Utilities/: FormatTools.h  Mixins.cpp
